--- a/.gitignore
+++ b/.gitignore
@@ -55,11 +55,6 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-
-# Dependency directories
-node_modules/
-jspm_packages/
-
 # Optional npm cache directory
 .npm
 
@@ -90,3 +85,25 @@ Thumbs.db
 
 # Data files
 src/data/
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
